--- a/app/src/main/res/layout/fragment_portal.xml
+++ b/app/src/main/res/layout/fragment_portal.xml
@@ -21,14 +21,16 @@ Copyright 2021 sakibeko
             android:id="@+id/layout_portal"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginHorizontal="@dimen/horizontal_margin"
             android:gravity="center"
             android:orientation="vertical">
 
-            <ImageView
-                android:id="@+id/ic_lock"
+            <TextView
+                android:id="@+id/text_announce"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@drawable/ic_lock" />
+                android:paddingBottom="@dimen/vertical_margin"
+                android:textAppearance="?android:attr/textAppearanceMedium" />
 
             <com.google.android.material.textfield.TextInputLayout
                 android:layout_width="match_parent"
