--- a/app/src/main/res/layout/activity_portal.xml
+++ b/app/src/main/res/layout/activity_portal.xml
@@ -11,8 +11,8 @@ Copyright 2021 sakibeko
     <androidx.fragment.app.FragmentContainerView
         android:id="@+id/fragment_portal"
         android:name="com.sakibeko.psman.portal.PortalFragment"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
